tests/NormalTests/paczka1/small_fuzzy/81178059.err
Error in line 5: Xz4 A801 42,2
Error in line 7: Xz4 S819 77,1
Error in line 11: FWviEVz S819 41,6
